Update payments benchmark to Tulip 2.2.0